scrollbar lost properties - fixed

--- a/css/main.css
+++ b/css/main.css
@@ -5,22 +5,25 @@ body {
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
-body ::-webkit-scrollbar {
-  width: 10px;
-}
-body ::-webkit-scrollbar-thumb {
-  background-color: #1266F1;
-  border-radius: 3px;
-}
-body ::selection {
-  background-color: #1266F1;
-  color: #fff;
-}
 body *::before,
 body *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1266F1;
+  border-radius: 3px;
+}
+
+::selection {
+  background-color: #1266F1;
+  color: #fff;
 }
 
 h1, h2, h3, h4, h5, h6 {
